[package]
name = "card-game-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
base64 = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
time = { version = "0.3.11", features = ["formatting", "serde", "serde-well-known"]}
